# xparam

./: .gitignore  AUTHORS  BUGS  COPYING  ChangeLog  INSTALL  Makefile.in  README  README.md  TODO  XPARAM-VERSION  configure  configure.in  tests.dsw  xparam.dsw  xparam_fix.diff
contrib/: 25xparam.csh  25xparam.sh  xparam.spec
doc/: conversions.html  credits.html  examples.html  faq.html  index.html  infodescription  installation.html  introduction.html  programmer.html  registration.html  user.html  xparam.info  xparam.info-1  xparam.info-2  xparam.info-3  xparam.info-4  xparam.sgml
doc/doc_examples/: calculator.cpp  circle.cpp  circle.h  circle.xpn  functions.cpp  functions.h  involved.cpp  mathfunc.h  my_shape.txt  reg_circle.cpp  reg_functions.cpp  reg_mathfunc.cpp  reg_shapes.cpp  shapes.cpp  shapes.h  simple.cpp
examples/: Makefile.in  configure  configure.in
examples/calculator/: BUGS  Makefile.in  calculator.dsp
examples/calculator/include/: functions.h  mathfunc.h
examples/calculator/src/: calculator.cpp  functions.cpp  reg_functions.cpp  reg_mathfunc.cpp
examples/classpath/: mathfunc.xpn
examples/involved/: Makefile.in  involved.dsp
examples/involved/include/: circle.h  shapes.h
examples/involved/src/: circle.cpp  involved.cpp  reg_circle.cpp  reg_shapes.cpp  shapes.cpp
examples/simple/: Makefile.in  simple.cpp  simple.dsp
lib/: Makefile.depend  Makefile.deprule.in  Makefile.in  xparam.dsp
lib/antlr/: ChangeLog
lib/antlr/antlr/: ANTLRException.hpp  AST.hpp  ASTArray.hpp  ASTFactory.hpp  ASTNULLType.hpp  ASTPair.hpp  ASTRefCount.hpp  BaseAST.hpp  BitSet.hpp  CharBuffer.hpp  CharScanner.hpp  CharStreamException.hpp  CharStreamIOException.hpp  CircularQueue.hpp  CommonAST.hpp  CommonASTWithHiddenTokens.hpp  CommonHiddenStreamToken.hpp  CommonToken.hpp  InputBuffer.hpp  LLkParser.hpp  LexerSharedInputState.hpp  MismatchedCharException.hpp  MismatchedTokenException.hpp  NoViableAltException.hpp  NoViableAltForCharException.hpp  Parser.hpp  ParserSharedInputState.hpp  RecognitionException.hpp  (+15 more)
lib/meta_sources/: LICENSE  README.txt  ctor_code_gen.pl  include_replace.pl  lexer.g  loader_lexer.g  loader_parser.g  parser.g  type_name_lexer.g  type_name_parser.g  update_all.pl  update_ctors.pl  update_parsers.pl
lib/pub_include/: xparam.h.in  xparam_extend.h.in
lib/sources/: DynamicLoaderLexer.cpp  DynamicLoaderParser.cpp  TypeNameLexer.cpp  TypeNameParser.cpp  xParamLexer.cpp  xParamParser.cpp  xp_file_utils.cpp  xp_loader.cpp  xp_param_imp.cpp  xp_paramset.cpp  xp_parsed_types.cpp  xp_parser.cpp  xp_regtype_bool.cpp  xp_regtype_char.cpp  xp_regtype_double.cpp  xp_regtype_float.cpp  xp_regtype_int.cpp  xp_regtype_long.cpp  xp_regtype_long_double.cpp  xp_regtype_long_long.cpp  xp_regtype_null.cpp  xp_regtype_raw_bytes.cpp  xp_regtype_short.cpp  xp_regtype_string.cpp  xp_regtype_tentative.cpp  xp_regtype_unsigned_char.cpp  xp_regtype_unsigned_int.cpp  xp_regtype_unsigned_long.cpp  xp_regtype_unsigned_long_long.cpp  xp_regtype_unsigned_short.cpp  xp_regtype_value_list.cpp  xp_regtype_value_tuple.cpp  xp_saver.cpp  xp_sstream.cpp  xp_value_list.cpp  xp_value_sink.cpp  xp_value_source.cpp  xp_value_source_imp.cpp  xp_value_tuple.cpp  xpv_common_regcom.cpp  (+18 more)
lib/src_include/: DynamicLoaderLexer.hpp  DynamicLoaderLexerTokenTypes.hpp  DynamicLoaderParser.hpp  DynamicLoaderParserTokenTypes.hpp  TypeNameLexer.hpp  TypeNameLexerTokenTypes.hpp  TypeNameParser.hpp  TypeNameParserTokenTypes.hpp  xParamLexer.hpp  xParamLexerTokenTypes.hpp  xParamParser.hpp  xParamParserTokenTypes.hpp  xp_file_utils.h  xp_regtype_char_body_output.h  xp_regtype_real_output.h  xp_sstream.h  xpv_conversions.h  xpv_dijkstra_queue.h  xpv_dynamic_loader.h  xpv_dynamic_loader_parser.h  xpv_link_patch.h  xpv_parsed_value_token.h  xpv_tentative.h
lib/xparam/: xp_config.h  xp_error.h  xp_handle.h  xp_hvl.h  xp_loader.h  xp_param.h  xp_param_imp.h  xp_paramset.h  xp_paramset_manip.h  xp_parsed_types.h  xp_parser.h  xp_raw_bytes.h  xp_saver.h  xp_singleton.h  xp_type_compare.h  xp_type_tag.h  xp_typed_tuple.h  xp_typed_value_map.h  xp_user_namespace.h  xp_value.h  xp_value_list.h  xp_value_management.h  xp_value_management_facade.h  xp_value_sink.h  xp_value_sink_imp.h  xp_value_source.h  xp_value_source_imp.h  xp_value_tuple.h  xparam.h  xparam_extend.h  xpv_arg_def.h  xpv_arg_passers.h  xpv_common_regcom.h  xpv_const.h  xpv_const_registry.h  xpv_convweight.h  xpv_copier.h  xpv_copier_imp.h  xpv_ctor.h  xpv_ctor_imp.h  (+41 more)
tests/: Makefile.depend  Makefile.deprule.in  Makefile.in  make_output.bat  test1.dsp  test11.dsp  test13.dsp  test14.dsp  test15.dsp  test16.dsp  test17.dsp  test18.dsp  test19.dsp  test2.dsp  test20.dsp  test3.dsp  test4.dsp  test5.dsp  test6.dsp  test7.dsp  test8.dsp  test9.dsp  test_readraw.dsp
tests/data/: test_file1.txt  test_file2.txt  test_file4.txt  test_file5.txt  test_file6.txt
tests/include/: test_bottle.h  test_rawprinter.h  test_reg_coordinate.h  test_reg_duck.h  test_reg_everything.h  test_reg_everything2.h  test_reg_goose.h  test_reg_marker.h  test_reg_reader.h
tests/script/: test20.bash
tests/src/: test1.cpp  test10.cpp  test11.cpp  test12.cpp  test13.cpp  test14.cpp  test15.cpp  test16.cpp  test17.cpp  test18.cpp  test19.cpp  test2.cpp  test20.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp  test7.cpp  test8.cpp  test9.cpp  test_marker.cpp  test_readraw.cpp  test_reg_bottle.cpp  test_reg_coordinate.cpp  test_reg_duck.cpp  test_reg_duck2.cpp  test_reg_everything.cpp  test_reg_everything2.cpp  test_reg_goose.cpp  test_reg_marker.cpp  test_reg_pair_map.cpp  test_reg_rawprinter.cpp  test_reg_reader.cpp  test_reg_vec_list.cpp
tests/test_res.dl_cmp/: test10_out.res  test11_out.res  test12_out.res  test14_out.res  test16_out.res  test17_out.res  test1_out.res  test20_out.res  test3_out.res  test8_out.res
tests/test_res.no_dl_cmp/: test13_out.res  test14_out.res  test15_out.res  test18_out.res  test4_out.res  test5_out.res  test9_out.res
tests/test_res.win_cmp/: test19_out.res  test1_out.res  test2_out.res  test3_out.res  test6_out.res  test7_out.res
(+29 files in other folders)
